# filler

./: ._includes  CMakeLists.txt  Makefile  file.txt  filler.trace  in.txt  junk  new_txt  piece_serv.c  starter
includes/: filler.h  get_next_line.h
libft/: ._Makefile  ._src  Makefile  ft_strsplit.c
libft/includes/: ._libft.h  libft.h
libft/src/: ft_isdigit.c
players/: vrudakov.filler
resources/: ._filler_vm  ._maps  ._players
resources/maps/: ._map00  ._map01  ._map02
resources/players/: ._abanlin.filler  ._carli.filler  ._champely.filler  ._grati.filler  ._hcao.filler  ._superjeannot.filler
src/: get_next_line.c  int_map.c  int_map.c.c  main.c  piece_serv.c  reading.c  second.c
